[gd_scene load_steps=2 format=3 uid="uid://bqgsdckewb2kt"]

[ext_resource type="Script" path="res://menus/options_menu/options_menu.gd" id="1_dilhx"]

[node name="OptionsMenu" type="CanvasLayer"]
layer = 2
script = ExtResource("1_dilhx")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(250, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Options"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="SfxOptionsContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/SfxOptionsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "SFX Volume"
horizontal_alignment = 1

[node name="SfxSlider" type="HSlider" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/SfxOptionsContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 3.0
step = 0.01

[node name="MusicOptionsContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/MusicOptionsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Music Volume"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/MusicOptionsContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 3.0
step = 0.01

[node name="WindowOptionsContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="WindowButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer2/VBoxContainer/WindowOptionsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(170, 24)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "Toggle 
Fullscreen"

[node name="Controls" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(84, 24)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 25
text = "Controls"

[node name="BackButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(84, 24)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 10
theme_override_font_sizes/font_size = 25
text = "Back"
